# malloc

./: CMakeLists.txt  README.md
libs/: CMakeLists.txt  m_mem.c
libs/inc/: m_mem.h
src/: CMakeLists.txt  cJSON.c  main.c
